# atuin-ai-adapter

./: .env.example  .gitignore  .tmuxp.yaml  AGENTS.md  README.md  flake.nix  pyproject.toml
.scratch/: REPO_RULES.md
.scratch/projects/00-atuin-ai-brainstorming/: ATUIN_AI_OVERVIEW.md  CONCEPT_REVIEW.md  IMPLEMENTATION_GUIDE.md  SPEC.md
.scratch/projects/01-initial-implementation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md
.scratch/projects/02-code-review/: ASSUMPTIONS.md  CODE_REVIEW.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md  REVIEW_REFACTOR.md
.scratch/projects/03-refactor-review/: INTEGRATION_GUIDE.md  REFACTORED_CODE_REVIEW.md
.scratch/projects/04-full-functionality-planning/: ASSUMPTIONS.md  ATUIN_ADAPTER_V2.md  ATUIN_ADAPTER_V2_1.md  BRAINSTORMING.md  CONCEPT_REVIEW.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md  V2_1_REFACTORING_GUIDE.md
.scratch/projects/05-refactored-code-review/: CODE_REVIEW.md  CONTEXT.md  ISSUES.md  PROGRESS.md
.scratch/projects/06-uv2nix-flake-packaging/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
src/atuin_ai_adapter/: app.py  backend.py  config.py  orchestrator.py  prompt.py  protocol.py  service.py  sse.py  tools.py  translator.py  vllm_client.py
src/atuin_ai_adapter/protocol/: atuin.py  openai.py
tests/: conftest.py  test_app.py  test_atuin_cli_e2e.py  test_backend.py  test_config.py  test_orchestrator.py  test_prompt.py  test_protocol.py  test_protocol_atuin.py  test_protocol_openai.py  test_real_world_remora.py  test_service.py  test_sse.py  test_tools.py  test_translator.py  test_vllm_client.py
tests/fixtures/: valid_request_with_tools.json  vllm_stream_simple.txt
tests/fixtures/calls/: auth_bad_token.json  continuation.json  conversation.json  minimal.json  no_context.json  simple.json  with_skills.json
tests/fixtures/streams/: happy_long.txt  malformed_json.txt  (+5 more)
tests/helpers/: dummy_openai_server.py
